mime filepath is added

--- a/settingstyle.css
+++ b/settingstyle.css
@@ -1,8 +1,8 @@
-*{
-    font-family: 'Roboto Mono', monospace;
-    background-color: white;
-  }
+* {
+  font-family: "Roboto Mono", monospace;
+  background-color: white;
+}
 
-body{
-    width: 150px;
-  }
+body {
+  width: 150px;
+}
